--- a/Prototype - Code Source/index.html
+++ b/Prototype - Code Source/index.html
@@ -72,7 +72,7 @@
           </div>
           <div class="modal-body">
             <form class="edit-form">
-              <input type="hidden" name="" value="" class="sid">
+              <input type="hidden" name="sid" value="" class="sid">
               <div class="form-row">
                 <div class="col-12">
                   <label for="inputName4">First Name</label>
