--- a/PROTOTYPE 2 PRODUCT/index.html
+++ b/PROTOTYPE 2 PRODUCT/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestion des Formateurs </title>
+  <title>PRODUCT MANAGER </title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
 
 
   <div class="container">
@@ -70,14 +69,14 @@
               <div class="form-row">
                 <div class="col-12">
                   <label for="inputLast4">Product Color</label>
-                  <input type="text" class="form-control Lastname"  id="inputLast4" placeholder="Product color">
+                  <input type="text" class="form-control productcolor"  id="inputLast4" placeholder="Product color">
                 </div>
               </div>
               
             </form>
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-success save-former">SAVE EDIT</button>
+            <button type="submit" class="btn btn-success save-product">SAVE EDIT</button>
           </div>
         </div>
       </div>
