--- a/Processus de développement/Réalisation/Ouvriers.html
+++ b/Processus de développement/Réalisation/Ouvriers.html
@@ -30,8 +30,8 @@
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
-<script type="text/babel" src="js/product.component.js"></script>
-  <script type="text/babel" src="js/crudProduct.component.js"></script>
+<script type="text/babel" src="js/ouvrier.component.js"></script>
+  <script type="text/babel" src="js/crudOuvrier.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
   <script type="text/babel" src="js/menu.component.js"></script>
   <script type="text/babel" src="js/app.component.js"></script>
