--- a/Processus de développement/Réalisation/Ouvriers.html
+++ b/Processus de développement/Réalisation/Ouvriers.html
@@ -33,8 +33,8 @@
 <script type="text/babel" src="js/ouvrier.component.js"></script>
   <script type="text/babel" src="js/crudOuvrier.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
-  <script type="text/babel" src="js/menu.component.js"></script>
-  <script type="text/babel" src="js/app.component.js"></script>
-  <script type="text/babel" src="js/script.js"></script>
+  <script type="text/babel" src="js/menuOuvrier.component.js"></script>
+  <script type="text/babel" src="js/appOuvrier.component.js"></script>
+  <script type="text/babel" src="js/scriptOuvrier.js"></script>
 </body>
 </html>
