--- a/Processus de développement/Réalisation/salaires.html
+++ b/Processus de développement/Réalisation/salaires.html
@@ -31,8 +31,8 @@
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
-  <script type="text/babel" src="js/menuPointage.component.js"></script>
-  <script type="text/babel" src="js/appPointage.component.js"></script>
-  <script type="text/babel" src="js/scriptPointage.js"></script>
+  <script type="text/babel" src="js/menuSalaires.component.js"></script>
+  <script type="text/babel" src="js/appSalaires.component.js"></script>
+  <script type="text/babel" src="js/scriptSalaires.js"></script>
 </body>
 </html>
