--- a/Processus de développement/Réalisation/index.html
+++ b/Processus de développement/Réalisation/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body class="hold-transition sidebar-mini">
 
@@ -31,8 +32,8 @@
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
-  <script type="text/babel" src="js/menuPointage.component.js"></script>
-  <script type="text/babel" src="js/appPointage.component.js"></script>
-  <script type="text/babel" src="js/scriptPointage.js"></script>
+  <script type="text/babel" src="js/menuAccueil.component.js"></script>
+  <script type="text/babel" src="js/appAccueil.component.js"></script>
+  <script type="text/babel" src="js/scriptAccueil.js"></script>
 </body>
 </html>
