--- a/Processus de développement/Réalisation/salaires.html
+++ b/Processus de développement/Réalisation/salaires.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SYSTEME POINTAGE</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="mystyle.css">
 </head>
+
 <body class="hold-transition sidebar-mini">
 
-<!-- ./wrapper -->
+  <!-- ./wrapper -->
 
-<!-- ./add  -->
-<div id="app"></div>
+  <!-- ./add  -->
+  <div id="app"></div>
 
-<script src='https://unpkg.com/react/umd/react.development.js'></script>
-<script src='https://unpkg.com/react-dom/umd/react-dom.development.js'></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+  <script src='https://unpkg.com/react/umd/react.development.js'></script>
+  <script src='https://unpkg.com/react-dom/umd/react-dom.development.js'></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <!-- jQuery -->
+  <script src="plugins/jquery/jquery.min.js"></script>
+  <!-- Bootstrap 4 -->
+  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- AdminLTE App -->
+  <script src="dist/js/adminlte.min.js"></script>
+  <!-- AdminLTE for demo purposes -->
+  <script src="dist/js/demo.js"></script>
+  <script type="text/babel" src="js/salaires.component.js"></script>
+  <script type="text/babel" src="js/crudSalaires.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
   <script type="text/babel" src="js/menuSalaires.component.js"></script>
   <script type="text/babel" src="js/appSalaires.component.js"></script>
   <script type="text/babel" src="js/scriptSalaires.js"></script>
 </body>
+
 </html>
