--- a/Processus de développement/Réalisation/pointage.html
+++ b/Processus de développement/Réalisation/pointage.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body class="hold-transition sidebar-mini">
 
@@ -30,6 +31,8 @@
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
+<script type="text/babel" src="js/pointage.component.js"></script>
+<script type="text/babel" src="js/crudPointage.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
   <script type="text/babel" src="js/menuPointage.component.js"></script>
   <script type="text/babel" src="js/appPointage.component.js"></script>
