--- a/Processus de développement/Réalisation/pointage.html
+++ b/Processus de développement/Réalisation/pointage.html
@@ -27,6 +27,8 @@
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="plugins/moment/moment.min.js"></script>
+<script src="plugins/moment/locales.min.js"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
