--- a/Processus de développement/Réalisation/salaires.html
+++ b/Processus de développement/Réalisation/salaires.html
@@ -34,7 +34,8 @@
   <script src="dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="dist/js/demo.js"></script>
-  <script type="text/babel" src="js/salaires.component.js"></script>
+  <script type="text/babel" src="js/profile.component.js"></script>
+  <script type="text/babel" src="js/Salaire.component.js"></script>
   <script type="text/babel" src="js/crudSalaires.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
   <script type="text/babel" src="js/menuSalaires.component.js"></script>
